--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
         <nav>
             <img src=static/logo.png width=50px>
             <a href='/about'>About</a>
-            <a href='/synonymizer'>Synonymizer</a>
+            <a href='/chat'>Chatroom</a>
             <a href='/'>Home</a>
         </nav>
         <div id = messageContainer>
@@ -18,7 +18,7 @@
                 <h1>Twarble</h1>
                 <p>Created by Jieruei Chang and Nathan Myers.</p>
                 <h2>What is Twarble?</h2>
-                <hp>Twarble is an application that takes tweets and replaces every word in them with their most-smart-sounding synonyms for increased comedic value.</p>
+                <hp>Twarble is an application that takes tweets and chat messages and replaces every word in them with their most-smart-sounding synonyms for increased comedic value.</p>
                 <h2>How does it work?</h2>
                 Twarble uses the tweepy library to obtain tweets from Twitter. Every word is then converted to a synonym with the Datamuse API. After conversion, the tweets are sent to a Flask server which provides you with all the garbled tweets you want.
                 <h2>Disclaimer</h2>
