--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
     <head>
         <link rel=stylesheet href=static/style.css type=text/css>
         <link rel="icon" href="static/logo.png" type="image/x-icon"/>
+        <meta name="viewport" content="width=device-width">
         <title>Twarble</title>
     </head>
     <body>
         <nav>
             <img src=static/logo.png width=50px>
             <a href='/about'>About</a>
-            <a href='/synonymizer'>Synonymizer</a>
+            <a href='/chat'>Chatroom</a>
         </nav>
         <div id = messageContainer>
             <div class=card>
