--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -25,6 +25,8 @@
             {% for post in posts %}
             <div class=card>
                 <p class=message>{{post.content}}</p>
+                <a class='tweet-link' onclick='document.getElementById("{{post.id}}").style="block";'>View Original</a>
+                <p class=message id='{{post.id}}' style='display:none;'>{{post.original}}</p>
                 <p class=handle>{{post.timestamp}}</p>
             </div>
             <br>
