Minor website changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <body>
         <nav>
             <img src=static/logo.png width=50px>
+            <a href='/' style='float:none;font-size:30px;font-weight:500;vertical-align:middle;'>twarble</a>
             <a href='/about'>About</a>
             <a href='/chat'>Chatroom</a>
         </nav>
