--- a/templates/about.html
+++ b/templates/about.html
@@ -9,9 +9,9 @@
     <body>
         <nav>
             <img src=static/logo.png width=50px>
+            <a href='/' style='float:none;font-size:30px;font-weight:500;vertical-align:middle;'>twarble</a>
             <a href='/about'>About</a>
             <a href='/chat'>Chatroom</a>
-            <a href='/'>Home</a>
         </nav>
         <div id = messageContainer>
             <div class=card>
