--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="static/logo.png" type="image/x-icon"/>
         <meta name="viewport" content="width=device-width">
         <title>Twarble</title>
+        <script src=static/speech.js></script>
     </head>
     <body>
         <nav>
@@ -23,9 +24,15 @@
             </div>
             <br>
             {% for post in posts %}
-            <div class=card>
+            <div class=card style='position:relative;z-index:-1'>
                 <p class=message>{{post.content}}</p>
                 <a class='tweet-link' onclick='document.getElementById("{{post.id}}").style="block";'>View Original</a>
+                <svg style = 'position:absolute;top:6px;right:6px;' onclick='speakText2("{{post.content}}")' xmlns="http://www.w3.org/2000/svg" version="1.0"  width="25" height="25" viewBox="0 0 75 75">
+                    <path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z"
+                    style="stroke:#777;stroke-width:5;stroke-linejoin:round;fill:#777;"
+                    />
+                    <path d="M48,27.6a19.5,19.5 0 0 1 0,21.4M55.1,20.5a30,30 0 0 1 0,35.6M61.6,14a38.8,38.8 0 0 1 0,48.6" style="fill:none;stroke:#777;stroke-width:5;stroke-linecap:round"/>
+                </svg>
                 <p class=message id='{{post.id}}' style='display:none;'>{{post.original}}</p>
                 <p class=handle>{{post.timestamp}}</p>
             </div>
