--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
         <link rel=stylesheet href=static/style.css type=text/css>
         <link rel="icon" href="static/logo.png" type="image/x-icon"/>
         <meta name="viewport" content="width=device-width">
+        <script src='static/speech.js'></script>
         <title>Twarble</title>
     </head>
     <body>
@@ -22,7 +23,7 @@
             </div>
             <br>
             {% for msg in messages %}
-            <div class=card>
+            <div class=card style='position:relative'>
                 <img class=pfp src={{msg.profile}}>
                 <div class=profileContainer>
                     <p class=name>{{msg.name}}</p>
@@ -31,6 +32,12 @@
                 <br style='clear:both'>
                 <p class=message>{{msg.text}}</p><br>
                 <a class='tweet-link' onclick='document.getElementById("{{msg.url}}").style.display="block";'>view real tweet</a>
+                <svg style = 'position:absolute;top:6px;right:6px;' onclick='speakText2("{{msg.text}}")' xmlns="http://www.w3.org/2000/svg" version="1.0"  width="25" height="25" viewBox="0 0 75 75">
+                    <path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z"
+                    style="stroke:#777;stroke-width:5;stroke-linejoin:round;fill:#777;"
+                    />
+                    <path d="M48,27.6a19.5,19.5 0 0 1 0,21.4M55.1,20.5a30,30 0 0 1 0,35.6M61.6,14a38.8,38.8 0 0 1 0,48.6" style="fill:none;stroke:#777;stroke-width:5;stroke-linecap:round"/>
+                </svg>
                 <div id={{msg.url}} style='display:none;'>
                     {{msg.realTweet|safe}}
                 </div>
