--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -24,7 +24,7 @@
             </div>
             <br>
             {% for post in posts %}
-            <div class=card style='position:relative;z-index:-1'>
+            <div class=card style='position:relative'>
                 <p class=message>{{post.content}}</p>
                 <a class='tweet-link' onclick='document.getElementById("{{post.id}}").style="block";'>View Original</a>
                 <svg style = 'position:absolute;top:6px;right:6px;' onclick='speakText2("{{post.content}}")' xmlns="http://www.w3.org/2000/svg" version="1.0"  width="25" height="25" viewBox="0 0 75 75">
